# aws_lambda_layer-project

./: .coveragerc  .gitignore  .readthedocs.yml  LICENSE.txt  MANIFEST.in  README.rst  lambda_function.py  pygitrepo-config.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/workflows/: main.yml
aws_lambda_layer/: __init__.py  _version.py  api.py  build_dist.py  context.py  layer.py  source.py  utils.py
debug/: requirements-example.txt  test_layer.py
docs/: Makefile  make.bat
docs/source/: conf.py
example/: build_layer.py  build_source.py  requirements-example.txt
tests/: test_import.py  test_utils.py
