[tool.poetry]
name = "aws_lambda_layer"
version = "0.2.3"
description = "A simple tool that automates the process of building and deploying AWS Lambda layers and source artifacts."
authors = ["Sanhe Hu <husanhe@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
boto3 = "*"
s3pathlib = "^2.0.1"



[tool.poetry.dev-dependencies]
# Don't put anything here, explicit is better than implicit


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
twine = "*"
wheel = "*"
pathlib_mate = "*"


[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]
Sphinx = "5.3.0"
sphinx-jinja = "2.0.2"
sphinx-copybutton = "0.5.1"
sphinx-design = "0.3.0"
readthedocs-sphinx-search = "0.3.1"
furo = "2023.03.27"
rstobj = "1.2.1"
docfly = "1.1.1"


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
